Fix for use_system_openssl being included in package.
Caused errors like the following:

    AssertionError: Found unexpected global file: /opt/omd/versions/2.5.0-2025.11.24.pro/use_system_openssl
    in /home/jenkins/agent/workspace/checkmk/master/builders/sign-cmk-distro-package/checkout/check-mk-pro-2.5.0-2025.11.24-sles15sp7-38.x86_64.rpm

Was caused by a bug in pkg_files including it's srcs transitive dependencies.

Change-Id: I5ce757451975b4c65e27884c904e8f2fdfee2c0a

--- a/omd/packages/omd/BUILD
+++ b/omd/packages/omd/BUILD
@@ -56,11 +56,6 @@ WRAPPED_EXECUTABLES = [
     renames = {"use_system_openssl": executable},
 ) for executable in WRAPPED_EXECUTABLES]
 
-pkg_files(
-    name = "wrapped_executables",
-    srcs = ["wrapper_" + executable for executable in WRAPPED_EXECUTABLES],
-)
-
 genrule(
     name = "omd_man_gz",
     srcs = ["omd.8"],
@@ -254,7 +249,7 @@ pkg_tar(
         ":skel",
         ":xinetd_link",
     ] + select({
-        "@cmk//distro:incompatible-openssl": [":wrapped_executables"],
+        "@cmk//distro:incompatible-openssl": ["wrapper_" + executable for executable in WRAPPED_EXECUTABLES],
         "//conditions:default": [],
     }),
     empty_dirs = [
