Use bazel to build Debian package
CMK-27396

Change-Id: I48d7bb2fbcf3069f7ea5c821511b7ddec73d9420

--- a/omd/BUILD
+++ b/omd/BUILD
@@ -294,6 +294,7 @@ pkg_files(
         "//packages/check-http:check_http_pkg",
     ],
     compressor = "@zstd//:zstd_cli",
+    compressor_args = "-19",
     extension = "tar.zst",
     package_dir_file = ":omd_root_dir",
     tags = ["manual"],
