Limit local bazel disk cache to a maximum of 100G
... to avoid running out of disk space or cleaning the cache directory
forcefully and completely

CMK-27883

Change-Id: I4f870623a71660afeef6f464b10abfce02721f9b

--- a/.bazelrc
+++ b/.bazelrc
@@ -5,6 +5,7 @@ common --registry=https://bcr.bazel.build
 
 # enable a local disk cache: this is especially relevant for local builds without an enabled bazel-remote
 common:linux --disk_cache=~/.cache/bazel_disk_cache/
+common:linux --experimental_disk_cache_gc_max_size=100G
 
 # reading WORKSPACE is disabled by default for Bazel 8
 common --enable_workspace
