Implement UI for delegated OAuth2 flow with MS Graph API
CMK-27719

Change-Id: I64f3928bc6838090206d0177b34dfb64ddfef458

--- a/packages/cmk-frontend-vue/BUILD
+++ b/packages/cmk-frontend-vue/BUILD
@@ -147,6 +147,7 @@ SRCS = [
     ":node_modules/radix-vue",
     ":node_modules/rollup",
     ":node_modules/sanitize-html",
+    ":node_modules/uuid",
     ":node_modules/vite",
     ":node_modules/vite-plugin-vue-devtools",
     ":node_modules/vue-component-type-helpers",
