--- a/packages/cmk-frontend-vue/package.json
+++ b/packages/cmk-frontend-vue/package.json
@@ -19,6 +19,7 @@
     "sanitize-html": "^2.15.0",
     "tailwindcss": "^3.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vue-component-type-helpers": "^3.0.6",
     "vue-router": "^4.5.0",
     "vue3-gettext": "4.0.0-alpha.8"
