Fix permissions of empty dirs
empty_dirs attribute of pkg_tar sets permissions to 555 instead of 755.
This results in an error, where files can no longer be edited, after
they have been copied.

The default of pkg_mkdirs is 755, which is why we don't need to set the
permissions explicitly. The issue was found on RPMs, because in DEBs the
issue is hidden by altered permissions later in the process. The
alteration of the DEB package should be fixed in a different change.

This regression was introduced in the change with ID:
I89f6b50dc69bb7b3d457c6f56e73547c4d5ccfdf

CMK-27853 CMK-27854

Change-Id: I9499f286b00797d9d1ceef2c89c634878929d33d

--- a/omd/packages/check_mk/BUILD
+++ b/omd/packages/check_mk/BUILD
@@ -1,4 +1,4 @@
-load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "pkg_mklink", "strip_prefix")
+load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "pkg_mkdirs", "pkg_mklink", "strip_prefix")
 load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 
 exports_files([
@@ -142,23 +142,9 @@ pkg_mklink(
     target = "../init.d/piggyback-hub",
 )
 
-pkg_tar(
-    name = "check_mk",
-    srcs = [
-        ":10-agent-receiver",
-        ":10-mkeventd",
-        ":55-automation-helper",
-        ":60-ui-job-scheduler",
-        ":90-piggyback-hub",
-        ":post_cp",
-        ":post_create",
-        ":post_mv",
-        ":post_restore",
-        ":post_update",
-        ":skel",
-        ":skel_755",
-    ],
-    empty_dirs = [
+pkg_mkdirs(
+    name = "empty_dirs",
+    dirs = [
         "lib/nagios/plugins",
         "lib/python3/cmk/gui/plugins/userdb",
         "lib/python3/cmk/gui/plugins/watolib",
@@ -213,6 +199,25 @@ pkg_tar(
         "skel/tmp/check_mk/piggyback_sources",
         "skel/tmp/check_mk/counters",
         "skel/tmp/check_mk/cache",
+    ],
+)
+
+pkg_tar(
+    name = "check_mk",
+    srcs = [
+        ":10-agent-receiver",
+        ":10-mkeventd",
+        ":55-automation-helper",
+        ":60-ui-job-scheduler",
+        ":90-piggyback-hub",
+        ":empty_dirs",
+        ":post_cp",
+        ":post_create",
+        ":post_mv",
+        ":post_restore",
+        ":post_update",
+        ":skel",
+        ":skel_755",
     ],
     visibility = ["//omd:__pkg__"],
 )
