also include .css and .js.map and images for jquery folder
Change-Id: Iad7cb1f6487bc5b535aca8178a56a61ee6e3b90a

--- a/packages/cmk-frontend/BUILD
+++ b/packages/cmk-frontend/BUILD
@@ -16,7 +16,7 @@ SRCS = glob([
     # TODO: tsconfig.json is missing
     "src/css/*",  # just for the directory
     "src/images/**/*.*",
-    "src/jquery/**/*.js",
+    "src/jquery/**/*.*",
     "src/js/**/*.js",
     "src/js/**/*.ts",
     "src/openapi/**/*.*",
