hyper-v: deploy signed hyperv_host.ps1
CMK-27711

Change-Id: I0e6940c594e6f3cca8e8a195de58a06fa83f5a8d

--- a/agents/windows/plugins/BUILD
+++ b/agents/windows/plugins/BUILD
@@ -39,6 +39,7 @@ TO_SIGN_SCRIPTS = [
     "windows_os_bonding.ps1",
     "windows_tasks.ps1",
     "windows_updates.ps1",
+    "hyperv_host.ps1",
 ]
 
 [
