--- a/packages/mk-sql/Cargo.toml
+++ b/packages/mk-sql/Cargo.toml
@@ -46,6 +46,7 @@ yaml-rust2.workspace = true
 [target.'cfg(windows)'.dependencies]
 odbc-api.workspace = true
 winreg.workspace = true
+encoding_rs = "0.8.35"
 
 [dev-dependencies]
 assert_cmd.workspace = true
