18541 FIX ODBC backend in Microsoft SQL Server plugin reports correct job name
SUP-26601

Change-Id: I7c165d28226c99025ac838736cdf2d3067a4dfc8

--- a/packages/mk-sql/Cargo.toml
+++ b/packages/mk-sql/Cargo.toml
@@ -45,6 +45,7 @@ derive_more = { version = "0.99", features = [
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
 odbc-api = "7.2.3"
+encoding_rs = "0.8.35"
 
 [dev-dependencies]
 tempfile = { version = "3.10.1" }
