--- a/packages/host/Cargo.lock.bazel
+++ b/packages/host/Cargo.lock.bazel
@@ -1,5 +1,5 @@
 {
-  "checksum": "8a5990ea7eb6f5af475c018ecd0a0a86c3bd9da2d0d5fa4a9de20b591a3fd6a5",
+  "checksum": "df9b8a9bd26af0950ce8389d49af625e9ee76437974cfc266e2f8078abbaabc1",
   "crates": {
     "addr2line 0.24.2": {
       "name": "addr2line",
@@ -11719,6 +11719,10 @@
           ],
           "selects": {
             "cfg(windows)": [
+              {
+                "id": "encoding_rs 0.8.35",
+                "target": "encoding_rs"
+              },
               {
                 "id": "odbc-api 10.2.0",
                 "target": "odbc_api"
@@ -30982,6 +30986,7 @@
     "bincode 1.3.3",
     "clap 4.5.32",
     "derive_more 1.0.0",
+    "encoding_rs 0.8.35",
     "faccess 0.2.4",
     "flate2 1.1.0",
     "flexi_logger 0.29.8",
