--- a/packages/host/mk-sql/Cargo.toml
+++ b/packages/host/mk-sql/Cargo.toml
@@ -46,6 +46,7 @@ derive_more = { version = "1.0", features = [
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
 odbc-api = "10.0.0"
+encoding_rs = "0.8.35"
 
 [dev-dependencies]
 tempfile = { version = "*" }
