Moved EC into a package
Change-Id: I797385bb3234b4067a77666c814a17f5d9c6207d

--- a/cmk/BUILD
+++ b/cmk/BUILD
@@ -221,6 +221,7 @@ CMK_PACKAGES = [
     "//packages/cmk-check-engine:helper-interface",
     "//packages/cmk-check-engine:snmplib",
     "//packages/cmk-crypto",
+    "//packages/cmk-ec",
     "//packages/cmk-events",
     "//packages/cmk-livestatus-client",
     "//packages/cmk-livestatus-client:py_livestatus",
