--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -159,6 +159,9 @@ VARIABLES:
     - NAME: CHANGED_CMK_CRYPTO_FILES
       SH: "echo '${CHANGED_FILES_REL}' | grep '^packages/cmk-crypto/' || true"
 
+    - NAME: CHANGED_CMK_EC_FILES
+      SH: "echo '${CHANGED_FILES_REL}' | grep '^packages/cmk-ec/' || true"
+
     - NAME: CHANGED_CMK_MESSAGING_FILES
       SH: "echo '${CHANGED_FILES_REL}' | grep '^packages/cmk-messaging/' || true"
 
@@ -604,6 +607,14 @@ STAGES:
       BAZEL_LOCKS_AMOUNT: 1
       TEXT_ON_SKIP: "No cmk-crypto files changed"
       RESULT_CHECK_FILE_PATTERN: "results/cmk-crypto.txt"
+
+    - NAME: "Package cmk-ec"
+      ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_PYPROJECT_TOML_FILE,CHANGED_CMK_EC_FILES,CHANGED_SEMGREP_RULE_FILES,CHANGED_PYTHON_REQUIREMENTS
+      DIR: "packages/cmk-ec"
+      COMMAND: "./run --unit-tests --lint=all &> ${RESULTS}/cmk-ec.txt"
+      BAZEL_LOCKS_AMOUNT: 1
+      TEXT_ON_SKIP: "No cmk-ec files changed"
+      RESULT_CHECK_FILE_PATTERN: "results/cmk-ec.txt"
 
     - NAME: "Package cmk-events"
       ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_PYPROJECT_TOML_FILE,CHANGED_CMK_EVENTS_FILES,CHANGED_SEMGREP_RULE_FILES,CHANGED_CMK_CCC_FILES,CHANGED_PYTHON_REQUIREMENTS
