--- a/packages/BUILD
+++ b/packages/BUILD
@@ -6,6 +6,7 @@ filegroup(
         "//packages/cmk-ccc:requirements.in",
         "//packages/cmk-check-engine:requirements.in",
         "//packages/cmk-crypto:requirements.in",
+        "//packages/cmk-ec:requirements.in",
         "//packages/cmk-events:requirements.in",
         "//packages/cmk-livestatus-client:requirements.in",
         "//packages/cmk-messaging:requirements.in",
@@ -25,6 +26,7 @@ filegroup(
         "//packages/cmk-ccc:dev-requirements.in",
         "//packages/cmk-check-engine:dev-requirements.in",
         "//packages/cmk-crypto:dev-requirements.in",
+        "//packages/cmk-ec:dev-requirements.in",
         "//packages/cmk-events:dev-requirements.in",
         "//packages/cmk-livestatus-client:dev-requirements.in",
         "//packages/cmk-messaging:dev-requirements.in",
