--- a/requirements.txt
+++ b/requirements.txt
@@ -3514,6 +3514,7 @@ pyasn1==0.6.1 \
     --hash=sha256:6f580d2bdd84365380830acf45550f2511469f673cb4a5ae3857a3170128b034
     # via
     #   -r cmk/requirements.in
+    #   -r packages/cmk-ec/requirements.in
     #   pyasn1-modules
     #   pysmb
     #   pysnmp
@@ -3797,7 +3798,9 @@ pymongo==4.15.4 \
     --hash=sha256:f0907b46df97b01911bf2e10ddbb23c2303629e482d81372031fd7f4313b9013 \
     --hash=sha256:f1d75f5b51304176631c12e5bf47eed021446669e5f99379b76fd2bd3929c1b4 \
     --hash=sha256:f53c83c3fd80fdb412ce4177d4f59b70b9bb1add6106877da044cf21e996316b
-    # via -r tests/dev-requirements.in
+    # via
+    #   -r packages/cmk-ec/requirements.in
+    #   -r tests/dev-requirements.in
 pymssql==2.3.9 \
     --hash=sha256:00aa861936374f251b8e1e4535f26daed32c2fc365b891fedcd97d7863d7321b \
     --hash=sha256:05ef3b3e2fb08e8c19226d5ed38838107842b8ceb03c2ee4095ccf7cd19c7154 \
@@ -3930,6 +3933,7 @@ pysnmp==6.2.6 \
     # via
     #   -c constraints.txt
     #   -r cmk/requirements.in
+    #   -r packages/cmk-ec/requirements.in
     #   snmpsim
 pysnmpcrypto==0.0.4 \
     --hash=sha256:5889733caa030f45d9e03ea9d6370fb06426a8cb7f839aabbcdde33c6f634679 \
@@ -3954,6 +3958,7 @@ pytest==8.3.5 \
     #   -r packages/cmk-ccc/dev-requirements.in
     #   -r packages/cmk-check-engine/dev-requirements.in
     #   -r packages/cmk-crypto/dev-requirements.in
+    #   -r packages/cmk-ec/dev-requirements.in
     #   -r packages/cmk-events/dev-requirements.in
     #   -r packages/cmk-livestatus-client/dev-requirements.in
     #   -r packages/cmk-messaging/dev-requirements.in
@@ -4115,6 +4120,7 @@ python-dateutil==2.9.0.post0 \
     #   -r cmk/requirements.in
     #   -r packages/cmk-agent-receiver/requirements.in
     #   -r packages/cmk-crypto/requirements.in
+    #   -r packages/cmk-ec/requirements.in
     #   -r packages/cmk-plugins/requirements.in
     #   arrow
     #   botocore
@@ -4801,7 +4807,9 @@ setproctitle==1.3.7 \
     --hash=sha256:fcb966a6c57cf07cc9448321a08f3be6b11b7635be502669bc1d8745115d7e7f \
     --hash=sha256:fe5ca35aeec6dc50cabab9bf2d12fbc9067eede7ff4fe92b8f5b99d92e21263f \
     --hash=sha256:ff3c1c32382fb71a200db8bab3df22f32e6ac7ec3170e92fa5b542cf42eed9a2
-    # via -r cmk/requirements.in
+    # via
+    #   -r cmk/requirements.in
+    #   -r packages/cmk-ec/requirements.in
 setuptools==78.1.1 \
     --hash=sha256:c3a9c4211ff4c309edb8b8c4f1cbfa7ae324c4ba9f91ff254e3d305b9fd54561 \
     --hash=sha256:fcc17fd9cd898242f6b4adfaca46137a9edef687f43e6f78469692a5e70d851d
@@ -5167,6 +5175,7 @@ time-machine==2.19.0 \
     #   -r non-free/packages/cmk-otel-collector/dev-requirements.in
     #   -r packages/cmk-agent-receiver/dev-requirements.in
     #   -r packages/cmk-crypto/dev-requirements.in
+    #   -r packages/cmk-ec/dev-requirements.in
     #   -r packages/cmk-events/dev-requirements.in
     #   -r tests/dev-requirements.in
 tinycss2==1.5.1 \
