groovy-lint: enable FieldTypeRequired
Change-Id: Ie0ec6b97f7280bdab70946dfbc054adab62d307f
JIRA-Ref: CMK-27757

--- a/bazel/tools/.groovylintrc.json
+++ b/bazel/tools/.groovylintrc.json
@@ -2,7 +2,7 @@
   "rules": {
     "basic.DeadCode": "error",
     "convention.CompileStatic": "off",
-    "convention.FieldTypeRequired": "info",
+    "convention.FieldTypeRequired": "error",
     "convention.IfStatementCouldBeTernary": "info",
     "convention.MethodReturnTypeRequired": "off",
     "convention.NoDef": "off",
