groovy-lint: enable IfStatementCouldBeTernary
Change-Id: I77d32d5b50d00a4b6e84e779555842d198edeac9
JIRA-Ref: CMK-27757

--- a/bazel/tools/.groovylintrc.json
+++ b/bazel/tools/.groovylintrc.json
@@ -3,7 +3,7 @@
     "basic.DeadCode": "error",
     "convention.CompileStatic": "off",
     "convention.FieldTypeRequired": "error",
-    "convention.IfStatementCouldBeTernary": "info",
+    "convention.IfStatementCouldBeTernary": "error",
     "convention.MethodReturnTypeRequired": "off",
     "convention.NoDef": "off",
     "convention.TrailingComma": "warning",
