groovy-lint: enable MethodReturnTypeRequired
Change-Id: I8a0526bed110915cee6b43f47d9455e1e63ee54c
JIRA-Ref: CMK-27757

--- a/bazel/tools/.groovylintrc.json
+++ b/bazel/tools/.groovylintrc.json
@@ -4,7 +4,7 @@
     "convention.CompileStatic": "off",
     "convention.FieldTypeRequired": "error",
     "convention.IfStatementCouldBeTernary": "error",
-    "convention.MethodReturnTypeRequired": "off",
+    "convention.MethodReturnTypeRequired": "error",
     "convention.NoDef": "off",
     "convention.TrailingComma": "warning",
     "convention.VariableTypeRequired": "off",
